--- a/create_cluster.yml
+++ b/create_cluster.yml
@@ -11,6 +11,8 @@
   hosts: etcd
   any_errors_fatal: true
   become: true
+  tags:
+    - etcd
   roles:
     - etcd
 
@@ -39,7 +41,7 @@
   tags:
   - post-install
   tasks:
-  - shell: "etcdctl --cert=/etc/etcd/etcd.crt --key=/etc/etcd/etcd.key --cacert=/etc/etcd/ca.crt --insecure-skip-tls-verify put /coreos.com/network/config '{ \"Network\": \"10.244.0.0/16\", \"Backend\": {\"Type\": \"vxlan\"}}'"
+  - shell: "etcdctl --cert=/etc/kubernetes/pki/etcd/server.crt --key=/etc/kubernetes/pki/etcd/server.key --cacert=/etc/kubernetes/pki/etcd/ca.crt --insecure-skip-tls-verify put /coreos.com/network/config '{ \"Network\": \"10.244.0.0/16\", \"Backend\": {\"Type\": \"vxlan\"}}'"
 
 - name: post-install
   hosts: all
